# cashnode

./: .gitignore  ARCHITECTURE.md  Anchor.toml  BUILD_PLAN.md  Cargo.toml  PROJECT_OVERVIEW.md  README.md  SMART_CONTRACT.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/agent-dashboard/: page.tsx
app/auth/: page.tsx
app/dashboard/: page.tsx
app/onboarding/: page.tsx
app/payout-confirmation/: page.tsx
app/privacy/: page.tsx
app/receiver-portal/: page.tsx
app/request-detail/: page.tsx
app/security/: page.tsx
app/sender-dashboard/: page.tsx
app/support/: page.tsx
artifacts/: render-walkthrough-video.ps1  walkthrough-filter.txt
components/: admin-submit-button.tsx  agent-live-presence-panel.tsx  agent-presence-runtime.tsx  app-shell.tsx  auth-controls.tsx  auth-screen.tsx  brand-logo.tsx  escrow-action-button.tsx  escrow-controls.tsx  onboarding-kit.tsx  pickup-location-selector.tsx  pickup-map-embed.tsx  sender-payout-form.tsx  transaction-journey.tsx  wallet-controls.tsx  wallet-provider.tsx
lib/: agent-capability.ts  agent-presence.ts  auth-session.ts  bitnob.ts  cashnode-data.ts  cashnode-escrow.ts  client-auth.ts  firebase-admin.ts  firebase-auth-messages.ts  firebase-client.ts  local-auth.ts  mongodb.ts  payout-requests.ts  paystack.ts  pickup-locations.ts  sender-onboarding.ts  solana-wallet.ts  user-greeting.ts  users.ts  webhook-events.ts  whatsapp.ts
programs/cashnode_escrow/: Cargo.toml
programs/cashnode_escrow/src/: lib.rs
(+35 files in other folders)
