[package]
name = "cashnode_escrow"
version = "0.1.0"
description = "Minimal CashNode SPL token escrow program for localnet/devnet demos"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashnode_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
